--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -5,6 +5,10 @@
     <title>vip vai ca leu</title>
 </head>
 <body>
-    <h1>trang dashboard</h1>
+<h1 style="color: aquamarine">DepropStu</h1>
+
+<form action="/logout" method="post">
+    <button type="submit">Log out</button>
+</form>
 </body>
 </html>
