--- a/user/sass/_common.scss
+++ b/user/sass/_common.scss
@@ -320,6 +320,9 @@ ul {
             color: #000;
         }
     }
+    .page-link.active {
+        color: #000;
+    }
 
     i{
         font-size: 12px;
