--- a/user/sass/_banner.scss
+++ b/user/sass/_banner.scss
@@ -1,23 +1,59 @@
 /**************** banner part css start ****************/
 .banner_part{
-    margin-bottom: 10px;
+    margin-top: 60px;
     background-color: $section_bg;
    
     .single_banner_slider{
-        .banner_text{
-            display: table;
+        .banner_img {
             width: 100%;
-            height: 700px;
-            .banner_text_iner{
-                display: table-cell;
-                vertical-align: middle;
+            height: 640px;
+            @media #{$small_mobile} {
+                height: 300px;
             }
-            @media #{$tab}{
-               height: 400px;
-            }
-            @media #{$medium_device}{
+            @media #{$tab_device} {
                 height: 500px;
             }
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: right;
+            }
+        }
+        .banner_text{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            position: absolute;
+            top: 0;
+            @media #{$tab_device} {
+                
+            }
+            @media #{$small_mobile} {
+                background: linear-gradient(90deg, #000000 0%, rgba(24, 25, 27, 0.9) 47.4%, rgba(29, 32, 39, 0) 100%);
+            }
+
+            .banner_text_iner{
+                max-width: 700px;
+                margin-left: 150px;
+                display: flex;
+                flex-direction: column;
+                align-items: start;
+                @media #{$small_mobile} {
+                    max-width: 250px;
+                    margin-left: 20px;
+                }
+                @media #{$tab_device} {
+                    max-width: 350px;
+                    margin-left: 50px;
+                }
+                @media #{$medium_device} {
+                    max-width: 400px;
+                    margin-left: 50px;
+                }
+            }
+
             h1{
                 font-size: 66px;
                 font-weight: 700;
@@ -26,11 +62,6 @@
                 color: $title-color;
                 @media #{$small_mobile}{
                     font-size: 25px;
-                    margin-bottom: 15px;
-                    line-height: 1.3;
-                }
-                @media #{$large_mobile}{
-                    font-size: 30px;
                     margin-bottom: 15px;
                     line-height: 1.3;
                 }
@@ -55,121 +86,89 @@
                 color: $title-color;
                 margin-bottom: 70px;
                 padding-right: 80px;
-                @media #{$tab}{
+                @media #{$small_mobile} {
+                    padding-right: 0;
+                    margin-bottom: 20px;
+                    font-size: 12px;
+                }
+                @media #{$tab_device}{
                     padding-right: 0;
                     margin-bottom: 20px;
                  }
                  @media #{$medium_device}{
                     padding-right: 0;
+                    margin-bottom: 20px;
                  }
             }
+
+            .btn_2 {
+                @media #{$small_mobile} {
+                  padding: 10px 30px;
+                }
+                @media #{$large_mobile} {
+                  padding: 10px 30px;
+                }
+              }
+            }
         }
-        .banner_img{
+
+
+    .owl-theme {
+        .owl-dots {
             position: absolute;
-            right: 30px;
-            top: 30%;
-        }
-    }
-    .owl-nav {
-        position: absolute;
-        left: 0;
-        bottom: 50px;
-        display: flex;
-        flex-direction: row;
-        gap: 20px;
+            margin-left: auto;
+            margin-right: auto;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            text-align: center;
 
-        @media #{$medium_device} {
-            bottom: 20px;
-        }
-
-        @media #{$tab} {
-            bottom: 30px;
-        }
-
-        .owl-prev,
-        .owl-next {
-            font-size: 7px;
-            border: 2px solid $white-color;
-            border-radius: 50% !important;
-            background-color: transparent;
-            color: $white-color;
-            padding: 10px 10px !important;
-
-            @media #{$medium_device} {
+            padding: 20px 0;
+            @media #{$tab_device} {
+                padding: 0 0 20px;
             }
 
-            @media #{$tab} {  
+            .owl-dot {
+                span {
+                    background: #747474 !important;
+                }
+            }
+            .owl-dot.active,
+            .owl-dot:hover {
+                span {
+                    background: white !important;
+                }
             }
         }
 
-        .owl-prev:hover, .owl-next:hover{
-            background-color: $white-color;
-            color: black;
-        }
-    }
-    .btn_2{
-        display: inline-block;
-        box-shadow: none;
-        @media #{$tab}{
-            .btn_2{
-                margin-top: 15px;
+        .owl-nav{
+            margin: 0;
+            .owl-next,.owl-prev {
+                position: absolute;
+                top: 45%;
+                @media #{$tab} {
+                    display: none;
+                }
+                @media #{$medium_device} {
+                    display: none;
+                }
             }
-         }
-    }
-
-    .owl-dots {
-        display: flex;
-        padding: 15px;
-        justify-content: center;
-        gap: 10px;
-        button.owl-dot {
-            width: 15px;
-            height: 15px;
-            background-color: #fff;
-            display: inline-block;
-            border-radius: 50%;
-            opacity: 0.5;
-            transform: scale(0.75);
-            transition: opacity 0.4s, transform 0.4s;
-            cursor: pointer;
+            .owl-next {
+                right: 20px;
+                
+            }
+            .owl-prev {
+                left: 20px;
+            }
+            .owl-prev:hover,
+            .owl-next:hover {
+            background: none !important;
+        }
         }
 
-        button.owl-dot.active,
-        button.owl-dot:hover {
-            background-color: #fff;
-        }
-    }
-
-    .slider-counter{
-        font-size: 40px;
-        font-weight: 700;
-        color: $white_color;
-        position: absolute;
-        right: 0;
-        bottom: 50px;
-        @media #{$tab}{
-            font-size: 40px;
-            right: 20px;
-            bottom: 20px;
-        }
-        @media #{$medium_device}{
-            font-size: 40px;
-            bottom: 10px;
-        }
-    }
-
-    @media #{$tab}{
-        padding: 0px;
-        height: 400px;
+        
     }
     
-     @media #{$medium_device}{
-        .banner_img {
-            img{
-                max-width: 75%;
-                float: right;
-            }
-        }
-     }
+
 } 
 /**************** hero part css end ****************/
