--- a/user/sass/_feature_part.scss
+++ b/user/sass/_feature_part.scss
@@ -3,6 +3,9 @@
   @include background("../img/bg_1.jpg");
   .section_tittle {
     margin-top: 70px;
+    @media #{$small_mobile} {
+      margin-top: 50px;
+    }
     h2 {
       margin: 0 auto;
       width: 100%;
@@ -12,35 +15,59 @@
       }
     }
   }
-  .owl-nav {
-    padding-bottom: 70px;
-    padding-top: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 20px;
-
-    .owl-prev,
-    .owl-next {
-        font-size: 7px;
-        border: 2px solid $black_color;
-        border-radius: 50% !important;
-        background-color: transparent;
-        color: $black_color;
-        padding: 10px 10px !important;
-
+  .owl-theme {
+    .owl-dots {
+        display: flex;
+        justify-content: center;
+        padding: 20px 0 50px;
+        @media #{$small_mobile} {
+          padding: 20px 0 50px;
+        }
+        @media #{$tab_device} {
+            padding: 30px 0 50px;
+        }
         @media #{$medium_device} {
+          padding: 30px 0 50px;
         }
 
-        @media #{$tab} {  
+        .owl-dot {
+            span {
+                background: #747474 !important;
+            }
+        }
+        .owl-dot.active,
+        .owl-dot:hover {
+            span {
+                background: white !important;
+            }
         }
     }
 
-    .owl-prev:hover, .owl-next:hover{
-        background-color: $black_color;
-        color: $white-color;
+    .owl-nav{
+        margin: 0;
+        .owl-next,.owl-prev {
+            position: absolute;
+            top: 35%;
+            @media #{$tab} {
+                display: none;
+            }
+            @media #{$medium_device} {
+                display: none;
+            }
+        }
+        .owl-next {
+            right: -50px;
+            
+        }
+        .owl-prev {
+            left: -50px;
+        }
+        .owl-prev:hover,
+        .owl-next:hover {
+        background: none !important;
     }
-}
+    } 
+  }
 
   .single_feature_slider {
     margin-right: 10px;
