--- a/user/sass/_menu.scss
+++ b/user/sass/_menu.scss
@@ -21,7 +21,7 @@
 		ul {
 			li .nav-link {
 				color: $menu-color;
-				font-size: 15px;
+				font-size: 14px;
 				padding: 25px 23px;
 				font-family: $font_stack_1;
 				text-transform: capitalize;
@@ -31,10 +31,9 @@
 				&:hover {
 					color: $white-color;
 				}
-
-				@media #{$medium_device} {
-					padding: 35px 20px;
-				}
+			}
+			li.active .nav-link {
+				color: #fafafa;
 			}
 		}
 	}
@@ -128,22 +127,21 @@
 			position: relative;
 			z-index: 1;
 			font-size: 15px;
-	
-			&:after {
-				position: absolute;
+		}
+		
+		span{
+			position: absolute;
 				border-radius: 50%;
-				background-color: #71cd14;
+				z-index: 1;
+				background-color: $btn_bg;
 				width: 14px;
 				height: 14px;
 				right: -8px;
-				top: -8px;
-				content: "5";
+				top: 15px;
 				text-align: center;
 				line-height: 15px;
 				font-size: 10px;
 				color: $white-color;
-			}
-	
 		}
 	}
 }
@@ -194,7 +192,7 @@
 
 @media #{$tab} {
 	.main_menu {
-		padding: 26px 0px;
+		padding: 20px 0px;
 	}
 
 	.home_menu .main-menu-item {
@@ -205,17 +203,19 @@
 		text-align: left !important;
 
 		.nav-item {
-			padding: 15px 15px !important;
-			background-color: rgb(29, 29, 31);
-			border-style: solid;
-			border-width: 1px;
-			border-bottom-color: #797979;
+			padding: 8px 16px !important;
+			background-color: #212529;
+			border-radius: 0.375rem;
 
 			.nav-link {
-				padding: 8px 15px !important;
+				padding: 8px 0px !important;
 				color: $white-color;
 				
 			}
+		}
+		.nav-item.active{
+			background-color: $btn_bg;
+			background-image: linear-gradient( 16deg, rgb(255,0,90) 0%, rgb(255,93,45) 64%, rgb(255,186,0) 100%);
 		}
 	}
 
@@ -223,10 +223,22 @@
 		z-index: 9999 !important;
 		position: absolute;
 		left: 0;
-		top: 50px;
-		width: 100%;
-		background-color: $white-color;
+		top: 40px;
+		width: 200px;
+		background-color: #212529;
 		text-align: center !important;
+		border-radius: 0.5rem;
+		padding: 8px !important;
+		box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.4);
+		animation: .5s slideup;
+		@keyframes slideup {
+			from{
+				transform: translateY(10%);
+			}
+			to{
+				transform: translateY(0%);
+			}
+		}
 	}
 
 	.dropdown {
