--- a/user/sass/_product.scss
+++ b/user/sass/_product.scss
@@ -534,173 +534,6 @@
 /* End Product Sidebar Area css
 ============================================================================================ */
 
-/* Single Product Area css
-============================================================================================ */
-
-.s_product_inner {}
-
-.s_product_img {
-  .carousel {
-    position: relative;
-
-    .carousel-indicators {
-      margin: 0px;
-      right: 20px;
-      width: auto;
-      left: auto;
-      bottom: 30px;
-
-      li {
-        height: 60px;
-        width: 60px;
-        background: transparent;
-        text-indent: 0;
-        margin-right: 10px;
-        position: relative;
-
-        &:after {
-          display: none;
-        }
-
-        &:before {
-          content: "";
-          background: rgba(197, 50, 45, 0.8);
-          position: absolute;
-          left: 0px;
-          top: 0px;
-          width: 100%;
-          height: 100%;
-          opacity: 0;
-        }
-
-        &.active {
-          &:before {
-            opacity: 1;
-          }
-        }
-      }
-    }
-  }
-}
-
-.s_product_text {
-  @media #{$small_mobile}{
-    margin-top: 30px;
-  }
-  @media #{$large_mobile}{
-  
-  }
-  
-  @media #{$tab_device}{
-  
-  }
-  @media #{$medium_device}{
-  
-  }
-  h5{
-    font-weight: 700;
-    font-size: 15px;
-    text-transform: capitalize;
-    margin-bottom: 40px;
-    @media #{$small_mobile}{
-      margin-bottom: 15px;
-    }
-    @media #{$large_mobile}{
-    
-    }
-    
-    @media #{$tab_device}{
-    
-    }
-    @media #{$medium_device}{
-    
-    }
-    span{
-      margin: 0 10px;
-    }
-
-  }
-  h3 {
-    font-size: 24px;
-    font-weight: 700;
-    color: $title-color;
-    margin-bottom: 10px;
-  }
-
-  h2 {
-    font-size: 24px;
-    font-weight: bold;
-    color: $primary-color;
-    margin-bottom: 15px;
-  }
-
-  .list {
-    li {
-      margin-bottom: 5px;
-
-      a {
-        font-size: 14px;
-        font-family: $body-font;
-        font-weight: normal;
-        color: #555555;
-
-        span {
-          width: 90px;
-          display: inline-block;
-
-          &:hover {
-            color: #555;
-          }
-        }
-
-        &.active {
-          color: $primary-color;
-
-          span {
-            color: #555;
-          }
-        }
-      }
-
-      &:last-child {
-        margin-bottom: 0px;
-      }
-    }
-  }
-
-  p {
-    padding-top: 20px;
-    border-top: 1px dotted #d5d5d5;
-    margin: 20px 0;
-  }
-
-  .card_area {
-    .main_btn {
-      line-height: 38px;
-      padding: 0px 38px;
-      text-transform: uppercase;
-      margin-right: 10px;
-    }
-
-    .icon_btn {
-      margin-right: 10px;
-      background: $offwhite;
-      border-radius: 3px;
-      color: $title-color;
-      display: inline-block;
-      line-height: 40px;
-      text-align: center;
-      padding: 0px 13px;
-      font-size: 14px;
-
-      &:hover {
-        background: #fff;
-        box-shadow: -14.142px 14.142px 20px 0px rgba(0, 0, 0, 0.1);
-      }
-    }
-  }
-  
-}
 .cart_area {
   .product_count {
     display: inline-block;
@@ -722,7 +555,7 @@
       padding: 7px;
       border-left: 1px solid $font_d;
       display: inline-block;
-  
+
       &:after {
         position: absolute;
         content: "";
@@ -732,7 +565,6 @@
         height: 1px;
         background-color: $font_d;
       }
-  
     }
   
     .input-number-decrement {
@@ -744,6 +576,7 @@
       display: inline-block;
     }
   }
+
   @media #{$small_mobile}{
     .media{
       display: block;
@@ -754,6 +587,10 @@
       display: block;
     }
   }  
+}
+
+.d-flex {
+  gap: 10px;
 }
 
 
@@ -909,7 +746,6 @@
   }
 }
 
-.review_list {}
 
 .review_item {
   margin-bottom: 35px;
@@ -1027,9 +863,6 @@
   }
 }
 
-.comment_list {
-  .review_item {}
-}
 
 /* End Single Product Area css
 ============================================================================================ */
@@ -1829,7 +1662,7 @@
   height: 14px;
   z-index: 9;
   cursor: pointer;
-  -webkit-transition: all 0.25s linear;
+  transition: all 0.25s linear;
   font-family: $body-font;
   font-weight: 500;
   color: $title-color;
