--- a/user/sass/_feature_part.scss
+++ b/user/sass/_feature_part.scss
@@ -105,12 +105,12 @@
         margin-bottom: 30px;
       }
       p {
-        color: $text-color;
+        color: $white_color;
         line-height: 13px;
       }
   
       h3 {
-        color: $text-color;
+        color: $white_color;
         font-size: 24px;
         font-weight: 700;
         margin-top: 21px;
