--- a/user/sass/_variables.scss
+++ b/user/sass/_variables.scss
@@ -5,8 +5,8 @@ $title-font: 'Be Vietnam Pro', sans-serif;
 /*Color Variables*/
 
 $primary-color  : #71cd14;
-$title-color    : #ffffff;
-$text-color     : #ffffff;
+$title-color    : #fff;
+$text-color     : #fff;
 $offwhite       : #f6f6f6;
 $white: #fff;
 
