--- a/user/sass/_breadcrumb.scss
+++ b/user/sass/_breadcrumb.scss
@@ -1,64 +1,15 @@
-.breadcrumb_bg {
-	@include background("../img/bg_1.jpg");
-	
-}
-.breadcrumb {
-	padding-top: 80px;
-	position: relative;
-	z-index: 1;
-	text-align: left;
-
-	.breadcrumb_iner {
-		height: 250px;
-		width: 100%;
-		display: table;
-
-		@media #{$tab} {
-			height: 150px;
-		}
-
-		.breadcrumb_iner_item {
-			display: table-cell;
-			vertical-align: middle;
-
-			h2 {
-				text-align: center;
-				color: $black-color;
-				font-size: 48px;
-				font-weight: 700;
-				margin-bottom: 10px;
-				text-transform: capitalize;
-				@media #{$small_mobile} {
-					font-size: 30px;
-				}
-
-				@media #{$large_mobile} {
-					font-size: 30px;
-				}
-
-				@media #{$tab_device} {
-					font-size: 48px;
-				}
-
-				@media #{$medium_device} {
-					font-size: 48px;
-				}
+.breadcrumb_area {
+	margin-top: 62px;
+	background-color: $white;
+	.breadcrumb {
+		margin: 0;
+		background-color: $white;
+		padding: 20px 0;
+		.breadcrumb-item {
+			a {
+				color: $black;
 			}
-
-			p {
-				text-transform: capitalize;
-				text-align: center;
-				font-size: 15px;
-				color: $black-color;
-			}
-
-			span {
-				margin: 0px 5px;
-				font-size: 12px;
-			}
-
 		}
 	}
-
+	
 }
-
