--- a/user/sass/_button.scss
+++ b/user/sass/_button.scss
@@ -1,136 +1,64 @@
 /* Main Button Area css
 ============================================================================================ */
-.submit_btn{
-	width: auto;
-	display: inline-block;
-	background: $white_color;
-	padding: 0px 50px;
-	color: #fff;
-	font-size: 13px;
-	font-weight: 500;
-	line-height: 50px;
-	border-radius: 5px;
-	outline: none !important;
-	box-shadow: none !important;
-	text-align: center;
-	border: 1px solid $border_color;
-	cursor: pointer;
-	@include transform_time(0.5s);
-	&:hover{
-		background: transparent;
-		
-	}
-}
-.btn_1{
-	display: inline-block;
-	padding: 9px 42px;
-	border-radius: 50px;
-	background-color: $section_bg;
-	font-size: 15px;
-	font-weight: 700;
-	color: #333;
-	@include transform_time(0.5s);
-	&:hover{
-		background-color: $btn_bg;
-		color: $white_color;
-	}
-}
-
-.btn_3{
+.custom_btn{
+	display: inline;
 	padding: 12px 40px;
 	line-height: 24px;
 	text-align: center;
 	border-radius: 30px;
+	border: none;
 	font-size: 14px;
 	font-family: $font_stack_2;
-	font-weight: 500;
-	color: $btn_bg;
-    text-transform: capitalize;
-	box-shadow: none !important;
-	border: 1px solid $btn_bg;
-	
-	&:hover{
-		background-color: $btn_bg;
-		@extend %custom_btn_bg_1;
-		color: $white_color;
-		-o-transition: all .4s ease-in-out;
-		-webkit-transition: all .4s ease-in-out;
-		transition: all .4s ease-in-out;
-		background-size: 200% auto;
-	}
-	@media #{$tab}{
+	font-weight: 600;
+    -o-transition: all .2s ease-in-out;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+	@media #{$small_mobile} {
 		font-size: 12px;
-		padding: 12px 20px;
-		line-height: 24px;
+		padding: 15px 24px;
+	}
+	@media #{$tab_device}{
+		font-size: 12px;
+		padding: 14px 20px;
 	}
 	@media #{$medium_device}{
-		padding: 12px 30px;
-		line-height: 24px;
+		padding: 14px 30px;
 	}
 }
 
-.btn_2{
-	padding: 12px 40px;
-	line-height: 24px;
-	text-align: center;
-	border-radius: 30px;
-	background-color: $btn_bg;
-	@extend %custom_btn_bg_1;
-	font-size: 14px;
-	font-family: $font_stack_2;
-	font-weight: 500;
-	color: $white_color;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-	text-transform: capitalize;
-	background-size: 200% auto;
-	
+.btn_black{
+	background-color: $black;
+	color: $white;
 	&:hover{
-		color: $white_color !important;
-		background-position: right center;
-		box-shadow: -1.717px 8.835px 29.76px 2.24px rgba(255, 51, 104, 0.18);
-	}
-	@media #{$tab}{
-		font-size: 12px;
-		padding: 12px 20px;
-		line-height: 24px;
-	}
-	@media #{$medium_device}{
-		padding: 12px 30px;
-		line-height: 24px;
+		background-color: #252525;
+		color: $white;
+		-o-transition: all .2s ease-in-out;
+		-webkit-transition: all .2s ease-in-out;
+		transition: all .2s ease-in-out;
 	}
 }
 
-
-.btn_4{
-	padding: 12px 40px;
-	line-height: 20px;
-	text-align: center;
-	border-radius: 30px;
-	border: 2px solid $btn_bg;
-	font-size: 13px;
-	font-family: $font_stack_2;
-	font-weight: 500;
-	color: $btn_bg;
-    -o-transition: all .4s ease-in-out;
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-	text-transform: capitalize;
-	background-size: 200% auto;
+.btn_white{
+	background-color: $white;
+	color: $black;
 	&:hover{
-		background-color: $btn_bg;
-		@extend %custom_btn_bg_1;
-		box-shadow: -1.717px 8.835px 29.76px 2.24px rgba(255, 51, 104, 0.18);
-		color: $white_color !important;
-		background-position: right center;
+		background-color: $hover;
+		color: $white;
+		-o-transition: all .2s ease-in-out;
+		-webkit-transition: all .2s ease-in-out;
+		transition: all .2s ease-in-out;
 	}
-	@media #{$tab}{
-		padding: 12px 30px;
-		line-height: 24px;
-	}
-	@media #{$medium_device}{
-	
+}
+
+.btn_greylight{
+	background-color: $grey;
+	color: $black;
+	&:hover{
+		background-color: $hover;
+		color: $black;
+		-o-transition: all .2s ease-in-out;
+		-webkit-transition: all .2s ease-in-out;
+		transition: all .2s ease-in-out;
 	}
 }
 
@@ -138,6 +66,28 @@
 	display: inline-block;
 
 }
+
+         
+.btn-grad {
+	background-image: linear-gradient(to right, #000000 0%, #434343  51%, #000000  100%);
+	margin: 10px;
+	padding: 15px 45px;
+	text-align: center;
+	text-transform: uppercase;
+	transition: 0.5s;
+	background-size: 200% auto;
+	color: white;            
+	box-shadow: 0 0 20px #eee;
+	border-radius: 10px;
+	display: block;
+  }
+
+  .btn-grad:hover {
+	background-position: right center; /* change the direction of the change here */
+	color: #fff;
+	text-decoration: none;
+  }
+ 
 /*=================== custom button rule start ====================*/
 
 .button{
