--- a/user/sass/_common.scss
+++ b/user/sass/_common.scss
@@ -1,5 +1,9 @@
 /**************** common css start ****************/
 @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@font-face {
+    font-family: Caveat;
+    src: url(/user/fonts/Fz-Caveat-Regular.ttf);
+}
 
 body {
     font-family: $font_stack_1;
