--- a/user/sass/_extends.scss
+++ b/user/sass/_extends.scss
@@ -1,6 +1,6 @@
 /**************** extend css start ****************/
 %custom_btn_bg_1{
-    background-image: linear-gradient( 16deg, rgb(255,0,90) 0%, rgb(255,93,45) 64%, rgb(255,186,0) 100%);  
+    background-image: linear-gradient(to right, #3d3d3d 0%, #000000 100%);  
 }
 
 
