--- a/user/sass/_menu.scss
+++ b/user/sass/_menu.scss
@@ -118,7 +118,6 @@
 			display: inline-block;
 			margin-left: .255em;
 			vertical-align: .255em;
-			content: "";
 			border: 0px solid transparent;
 		}
 	
@@ -126,22 +125,23 @@
 			color: $white-color;
 			position: relative;
 			z-index: 1;
-			font-size: 15px;
 		}
 		
 		span{
 			position: absolute;
 				border-radius: 50%;
 				z-index: 1;
-				background-color: $btn_bg;
-				width: 14px;
-				height: 14px;
+				background-color: $white;
+				border: 2px solid $black;
+				width: 17px;
+				height: 17px;
 				right: -8px;
-				top: 15px;
+				top: 12px;
 				text-align: center;
 				line-height: 15px;
-				font-size: 10px;
-				color: $white-color;
+				font-weight: 900;
+				font-size: 8px;
+				color: $black;
 		}
 	}
 }
