--- a/user/sass/_single_product.scss
+++ b/user/sass/_single_product.scss
@@ -2,6 +2,7 @@
 ============================================================================================ */
 
 .product_image_area {
+  background-color: $white;
   margin-top: 62px;
   padding-top: 70px;
 }
@@ -21,7 +22,7 @@
       width: fit-content;
       color: $font_1;
       &:hover {
-        color: $black-color;
+        color: $black;
       }
     }
   }
@@ -29,29 +30,14 @@
   .product_name {
     font-size: 24px;
     font-weight: 500;
-    color: $black-color;
+    color: $black;
     margin-bottom: 10px;
   }
 
   .product_price {
     margin-bottom: 10px;
-    .price_regular {
-      font-size: 16px;
-      color: $black_color;
-    }
-
-    .sale {
-      color: #adadad !important;
-      font-size: 14px !important;
-      text-decoration: line-through;
-    }
-
-    .price_sale {
-      padding-left: 5px;
-      font-size: 16px;
-      color: $btn_bg;
-      font-weight: 500;
-    }
+    font-size: 16px;
+    font-weight: 500;
   }
 
   .list {
